aligns logo correctly on small screens, and adds better validation for username

--- a/eve-raiders-data/src/Login/Login.module.scss
+++ b/eve-raiders-data/src/Login/Login.module.scss
@@ -29,6 +29,7 @@
 @media screen and (max-width: 672px) {
   .formContainer {
     flex-direction: column;
+    align-items: center;
   }
 
   .title {
